Activities styling js code now uses jquery.

activities.css styles raw xml data.

Switched to nodejs bake script, so we need nodejs installed to build 
the ctrack.min.js file.