@@ -1,9 +1,8 @@
 * {color:#444; font-family:sans-serif; word-wrap:break-word;}
 body,html {background:none, #D8D8D8; color:#444; font-family:sans-serif;}
-a {text-decoration:none;}
+a {text-decoration:none; color:#FF7A00;}
+a:hover {color:#FFAB5E;}
 
-reporting-org {display:none;}
-recipient-region {display:none;}
 ok {display:none;}
 query {display:none;}
 iati-activity * {display:none;}
@@ -76,6 +75,8 @@ period-end {display:table-cell; font-size:16px; width:290px; max-width:290px;}
 budget value {display:table-cell; font-size:16px; width:300px; max-width:300px; padding-right:40px;}
 
 transaction {display:block; width:960px; border-top:1px solid #ccc; padding:20px 0; border-bottom:0; background-color:#fff;}
+transaction a {color:#FF7A00;}
+transaction a:hover {color:#FFAB5E;}
 transaction:last-of-type {border-bottom:0px solid #ccc;}
 transaction:nth-of-type(1) {margin-top:0px; padding-top:0;}
 transaction:nth-of-type(1):before {content:"Transaction"; font-size:26px; color:#fff; background-color:#666; display:block; padding:20px 40px; margin-bottom:25px;}
@@ -125,5 +126,17 @@ iati-activity  > a.a_document-link ~ a.a_document-link:before {content:""; paddi
 
 document-link title:nth-of-type(n+1):after {content:"READ DOCUMENT"; font-size:12px; display:inline-block; padding-left:20px; color:#aaa;}
 a.a_document-link:last-of-type {padding-bottom:60px;}
-document-link title:hover {color:#FF7A00;}
+document-link title {color:#FF7A00;}
+document-link title:hover {color:#FFAB5E;}
+
+a.a_related-activity {display:block; width:880px; padding:40px 40px 0 40px; background-color:#fff;}
+a.a_related-activity:before {content:"This activity is a"; display:inline-block; padding-right:5px; color:#444; font-size:18px;}
+related-activity {display:inline-block; color:#FF7A00;}
+related-activity:before {content:"of "; display:inline-block; padding-right:5px; color:#444; font-size:18px;}
+related-activity:hover {color:#FFAB5E;}
+
+reporting-org {display:block; width:880px; padding:10px 40px 60px 40px; background-color:#fff;}
+reporting-org:before {content:"This activity is reported by"; display:inline-block; padding-right:5px; color:#444; font-size:18px;}
+reporting-org:after {content:"."; display:inline-block; color:#444; font-size:18px;}
+
 
