@@ -1,3 +1,13 @@
+Activity View (2014-02-03 shi)
+==============================
+Added graphs for sectors with allocated values
+Added related-activity
+Added reporting-org
+All links visible with hover states
+Hierarchy for transactions sorting
+Added commas to transaction value
+
+
 Activities styling js code now uses jquery.
 
 activities.css styles raw xml data.
